gitops/apps/sufra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: sufra
  name: sufra
