gitops/apps/sufra/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: sufra
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: api-gateway
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: sufra
spec:
  ports:
    - port: 3004
      protocol: TCP
      targetPort: 3004
  selector:
    app: auth-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: sufra
spec:
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: order-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: sufra
spec:
  ports:
    - port: 3003
      protocol: TCP
      targetPort: 3003
  selector:
    app: restaurant-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: manager-service
  namespace: sufra
spec:
  ports:
    - port: 3006
      protocol: TCP
      targetPort: 3006
  selector:
    app: manager-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: sufra
spec:
  ports:
    - port: 3007
      protocol: TCP
      targetPort: 3007
  selector:
    app: notification-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
  namespace: sufra
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3010
  selector:
    app: client
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: sufra
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 4000
  selector:
    app: dashboard
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: paneldashboard
  namespace: sufra
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3008
  selector:
    app: paneldashboard
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: sufra
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: sufra
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: sufra
spec:
  ports:
    - name: client
      port: 4222
      protocol: TCP
      targetPort: 4222
    - name: monitor
      port: 8222
      protocol: TCP
      targetPort: 8222
  selector:
    app: nats
  type: ClusterIP
---
