gitops/apps/sufra/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website
  name: website
  namespace: sufra
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: website
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        # Marketing site (Next.js). Tag is bumped by CI (kustomize edit set image).
        - image: 220719767281.dkr.ecr.us-east-1.amazonaws.com/sufra/website:sha-2bc96c0
          imagePullPolicy: IfNotPresent
          name: website
          ports:
            - containerPort: 3020
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: sufra
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3020
  selector:
    app: website
  type: ClusterIP
